--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
-<Doctype HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-  </head>
+<head>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <title>Droid</title>
+</head>
+<body>
+  
+  <section class="container">
+    
+    <!-- header -->
+    <header>
+      <h1>My First Website</h1>
+    </header>
+  
+    <!-- content -->
+    <p>
+      Weclome to my website! Here are some things I enjoy.
+    </p>
 
-  <body>
-   <section style="background-color: black; color: white;opacity: 0.7"><h1>Index.html</h1></section>
+    <ul>
+      <li>Web Development</li>
+      <li>Chess</li>
+      <li>Reading</li>
+      <li>Learning</li>
+    </ul>
+    
 
-   <p> hello world! </p>
-  </body>
+    <!--  quotes  -->
+    <h3>Favorite Quotes</h3>
+    <br>
+
+    <blockquote class="quote">
+      <p>
+        Here is a favorite quote of mine...
+      </p>
+    </blockquote>
+
+    <br>
+
+    <blockquote class="quote">
+      <p>
+        ...and another
+      </p>
+    </blockquote>
+
+  </section>
+
+</body>
 </html>
